@@ -90,10 +90,18 @@ cbind <- function(..., deparse.level = 1)
 rbind <- function(..., deparse.level = 1)
     .Internal(rbind(deparse.level, ...))
 
-if(FALSE) { ## methods:::bind_activation defunct as of 2018-02-05 (R >= 3.5.0)
-.__H__.cbind <- cbind
-.__H__.rbind <- rbind
+## methods:::bind_activation defunct as of 2018-02-05 (R >= 3.5.0)
+## Deprecating these aliases now
+.__H__.cbind <- function(..., deparse.level = 1) {
+    .Deprecated("base::cbind")
+    .Internal(cbind(deparse.level, ...))
 }
+.__H__.rbind <- function(..., deparse.level = 1) {
+    .Deprecated("base::rbind")
+    .Internal(rbind(deparse.level, ...))
+}
+
+
 
 # convert deparsing options to bitmapped integer
 ..deparseOpts <-
